<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_cat1" >
        <SwitchPreference
        	android:defaultValue="Low"
        	android:title="@string/sensitivity"
        	android:summary="@string/sensitivity_summary"
            android:switchTextOff="low"
            android:switchTextOn="high"
            android:key="sensitivity"/>
        <EditTextPreference 
            android:title="@string/timeout"
            android:defaultValue="5"
            android:summary="@string/timeout_summary"
            android:key="timeout"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_cat2" >
        <EditTextPreference 
            android:title="@string/phonenr"
            android:summary="@string/phone_summary"
            android:key="phone"/>
    </PreferenceCategory>
 
</PreferenceScreen>