<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/sensivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sensivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekbar_sensivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50" />

    <TextView
        android:id="@+id/timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_timeout"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekbar_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="5" />

    <ToggleButton
        android:id="@+id/run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_run_start"
        android:textOff="@string/btn_run_start"
        android:textOn="@string/btn_run_stop"
        android:onClick="onRunClicked" />

    <!-- 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_sensivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lbl_sensivity"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txt_timeout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lbl_timeout"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    -->

</LinearLayout>